--- a/themes/hexo-theme-matery/languages/default.yml
+++ b/themes/hexo-theme-matery/languages/default.yml
@@ -80,3 +80,7 @@ Archives: Archives
 About: About
 Contact: Contact
 Friends: Friends
+Books: Books
+Movies: Movies
+Musics: Musics
+Galleries: Galleries
